# democracy_chain

./: .env  .env.example  .gitignore  .pre-commit-config.yml  Makefile  README.en.md  README.es.md  README.md  README.zh.md  ROADMAP.md  TODO.md  backend_client.sh  commands.txt  docker-compose.yml  get_archive.sh  metadata.json
backend/: Dockerfile  Makefile  app.py  database.py  models.py  pyproject.toml  requirements.txt  wait-for-it.sh
backend/src/backend/: main.py
backend/src/backend/api/: main.py
backend/src/backend/api/routes/: chat.py  files.py  program.py  wallet.py
backend/src/backend/core/: config.py  db.py
backend/src/backend/models/: uploadedfile.py
backend/src/backend/services/: database.py  llm.py  qdrant.py  rabbitmq.py  storage.py
dapp/: .prettierignore  .solhint.json  Dockerfile  Makefile  README.md  gas-report.txt  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
dapp/contracts/: DemocracyChain.sol
dapp/contracts/libs/: StringsLib.sol
dapp/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
dapp/ignition/deployments/chain-11155111/artifacts/: DemocracyChain2Module#DemocracyChain.dbg.json  DemocracyChain2Module#DemocracyChain.json
dapp/ignition/modules/: DemocracyChainModule.mjs
dapp/scripts/: deploy_n_run.sh  get_wallet_password.sh  interact.mjs  preconditions.sh  server.mjs  wait-for-it.sh
dapp/test/unit/: DemocracyChain.test.js
documentation/: .markdownlint.json  Makefile  README.en.md  README.es.md  README.zh.md  ROADMAP.en.md  ROADMAP.es.md  ROADMAP.zh.md  TODO.en.md  TODO.es.md  TODO.zh.md
ejemplos/: create_programs.sh  package.json  programa1.txt  programa10.txt  programa11.txt  programa12.txt  programa13.txt  programa14.txt  programa15.txt  programa16.txt  programa17.txt  programa18.txt  programa19.txt  programa2.txt  programa20.txt  programa21.txt  programa22.txt  programa23.txt  programa24.txt  programa25.txt  programa3.txt  programa4.txt  programa5.txt  programa6.txt  programa7.txt  programa8.txt  programa9.txt  programas.md  register_candidate.js  register_programs.sh  wallets.csv
examples/: Makefile  eslint.config.mjs  package-lock.json  package.json  programas.md  pyproject.toml  wallets.csv
examples/scripts/: create_programs.py  register_candidate.js  register_candidate.mjs  register_programs.sh
frontend/: .eslintrc.cjs  .markdownlint.json  Dockerfile  Makefile  README.md  index.html  knip.json  package-lock.json  package.json  run_server.sh  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: embedding-worker.js
frontend/src/: Router.tsx  config.ts  main.tsx
frontend/src/api/: chat.ts
frontend/src/assets/: TiptapEditor.css  chatbox.css  index.css
frontend/src/components/: ChatBox.tsx  ConnectedRoute.tsx  Footer.tsx  Modal.tsx  Navbar.tsx  ResizableImage.tsx  web3.tsx
frontend/src/contracts/: democracy_chain.ts
frontend/src/hooks/: useDemocracyContract.ts  useParallax.ts
frontend/src/pages/: About.tsx  Candidates.tsx  Citizen.tsx  Editor.tsx  Home.tsx  Layout.tsx  Viewer.tsx
frontend/src/types/: frontend.types.ts
frontend/src/workers/: embedding-worker.ts
hardhat-node/: Dockerfile
llm/: Dockerfile
rabbitmq/: Dockerfile  definitions.json.template  rabbitmq.conf.template
worker/: Dockerfile  Makefile  ingest.py  pyproject.toml  requirements.txt
worker/src/worker/: main.py
worker/src/worker/core/: config.py
worker/src/worker/services/: chunk_text.py  extract_text.py  process_file.py  processor.py
